fix: layout bug in favorites page

--- a/src/pages/favorite-media/user-favorites.module.scss
+++ b/src/pages/favorite-media/user-favorites.module.scss
@@ -44,6 +44,8 @@
       height: fit-content;
       break-inside: avoid;
       max-width: 20rem;
+      width: 100%;
+      box-sizing: border-box;
 
       &:not(:first-child) {
         margin-top: var(--gap-masonry);
